WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290723
REGRESSION (
281882@main
): LayoutTests/fast/repaint/content-visibility-hidden-container-with-abs-pos-c-v-auto-child.html fails
https://bugs.webkit.org/show_bug.cgi?id=290723
Summary
REGRESSION (281882@main): LayoutTests/fast/repaint/content-visibility-hidden-...
alan
Reported
2025-03-29 18:38:46 PDT
while the test "passes" (it tracks dirty rects), the green box stays around.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-29 18:39:20 PDT
<
rdar://problem/148183112
>
Matt Woodrow
Comment 2
2025-03-30 16:48:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43289
EWS
Comment 3
2025-04-01 23:52:07 PDT
Committed
293085@main
(6ee5bd84aa85): <
https://commits.webkit.org/293085@main
> Reviewed commits have been landed. Closing PR #43289 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug