REGRESSION (281882@main): LayoutTests/fast/repaint/content-visibility-hidden-container-with-abs-pos-c-v-auto-child.html fails. https://bugs.webkit.org/show_bug.cgi?id=290723 <rdar://148183112>

Reviewed by Alan Baradlay.

Changing the value of content-visibility requires that child layers recompute
their visible content status (RenderLayer::computeHasVisibleContent() checks
isSkippedContent(), not hasSkippedContent()).

We also can't use the fast path of setHasVisibleContent() (instead of setting
the dirty bit) when setting visibility:visible, since the layer can still be
hidden (by content-visibility, or overflow truncation).

Duplicate the existing repaint rect test to have a reftest equivalent.

* LayoutTests/fast/repaint/content-visibility-hidden-container-with-abs-pos-c-v-auto-child-reftest-expected.html: Added.
* LayoutTests/fast/repaint/content-visibility-hidden-container-with-abs-pos-c-v-auto-child-reftest.html: Added.
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::styleWillChange):

Canonical link: https://commits.webkit.org/293085@main